# NeighbourhoodBot

./: README.md  actions.py  celery_app.py
action-scripts/: action-classifier-inference.py  llama-not-optimised.py  llama-v1.py  llama.py  search-disconnection.py  store-search-embeddings.py
milvus-scripts/: create-collection-disconnection.py  create-collection.py  delete-collection.py  disconnection-insert-knowledge-base.py  knowledge-base-loneliness.txt  problems_data.txt
rasa/: config.yml  credentials.yml  domain.yml  llm_prompt_template.jinja2  pyproject.toml  story_graph.dot
rasa/data/: nlu.yml  rules.yml  stories.yml
