[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rasa-local-3"
version = "0.1.0"
description = "A Rasa project for local development"
authors = ["Orlando"]
package-mode=false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rasa = "==3.7.10"
rasa-sdk = "==3.7.1"

[[tool.poetry.source]]
name = "rasa-plus"
url = "https://europe-west3-python.pkg.dev/rasa-releases/rasa-plus-py/simple"
priority = "supplemental"
